tests/paczka1/small_fuzzy/56714240.err
Error in line 1: q45 S340 [4,5
Error in line 11: S340 A822 56,84
Error in line 10: S340 S340 71,1
Error in line 8: eFG0qDiC A618 19,2
